--- a/proyectos js/recetario/index.html
+++ b/proyectos js/recetario/index.html
@@ -6,29 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recetario</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <h1>Recetario online</h1>
       <label for="buscador">
         <input id="buscador" type="text" />
-        <button><i>lupita</i></button></label
-      >
-    
+        <button>
+          <i
+            ><img
+              height="30px"
+              src="simbolo-de-la-interfaz-de-busqueda.png"
+              alt="icono de lupa"
+          /></i></button
+      ></label>
     </header>
     <div class="container">
-    <article class="aside">
-      <aside>
-        <h2>Recetas</h2>
-        <h3>Ensalada de quinoa y pollo</h3>
-      </aside>
-    </article>
-    <main>
-      <div class="receta" id="Ensalada de quinoa y pollo">
-        <h3>Ensalada de quinoa y pollo</h3>
-        <h4>Tipo de comida: Ensalada</h4>
-        <h4>
-          Ingredientes:
+      <article class="aside">
+        <aside>
+          <h2>Recetas</h2>
+          <h3>Ensaladas</h3>
+          <h4>Ensalada de quinoa y pollo</h4>
+        </aside>
+      </article>
+      <main>
+        <div class="receta" id="Ensalada de quinoa y pollo">
+          <h3>Ensalada de quinoa y pollo</h3>
+          <h5>Tipo de comida: Ensalada</h5>
+          <h6>Ingredientes:</h6>
           <ul>
             <li>1 taza de quinoa</li>
             <li>2 tazas de agua</li>
@@ -36,38 +47,35 @@
             <li>1/2 taza de tomates cherry</li>
             <li>1/2 taza de pepino</li>
           </ul>
-        </h4>
-        <h4>
-          Procedimiento:
-          <ul>
-            <ol>
-              <li>
-                Cocina la quinoa con el agua siguiendo las instrucciones del
-                paquete.
-              </li>
-              <li>
-                Corta las pechugas de pollo en cubos y cocínalas en una sartén
-                con un poco de aceite de oliva hasta que estén doradas por fuera
-                y cocidas por dentro.
-              </li>
-              <li>
-                Corta los tomates cherry por la mitad y el pepino y la cebolla
-                roja en cubos.
-              </li>
-              <li>
-                En un tazón grande, mezcla la quinoa cocida, el pollo cocido,
-                los tomates cherry, el pepino, la cebolla roja y la menta.
-              </li>
-              <li>
-                Aliña la ensalada con aceite de oliva, jugo de limón, sal y
-                pimienta al gusto.
-              </li>
-            </ol>
-          </ul>
-        </h4>
-      </div>
-    </main>
-</div>
+
+          <h6>Procedimiento:</h6>
+
+          <ol>
+            <li>
+              Cocina la quinoa con el agua siguiendo las instrucciones del
+              paquete.
+            </li>
+            <li>
+              Corta las pechugas de pollo en cubos y cocínalas en una sartén con
+              un poco de aceite de oliva hasta que estén doradas por fuera y
+              cocidas por dentro.
+            </li>
+            <li>
+              Corta los tomates cherry por la mitad y el pepino y la cebolla
+              roja en cubos.
+            </li>
+            <li>
+              En un tazón grande, mezcla la quinoa cocida, el pollo cocido, los
+              tomates cherry, el pepino, la cebolla roja y la menta.
+            </li>
+            <li>
+              Aliña la ensalada con aceite de oliva, jugo de limón, sal y
+              pimienta al gusto.
+            </li>
+          </ol>
+        </div>
+      </main>
+    </div>
 
     <script src="index.js"></script>
   </body>
